Changed a few things

--- a/dbus/org.upwork.hidbluetooth.conf
+++ b/dbus/org.upwork.hidbluetooth.conf
@@ -3,10 +3,10 @@
  "http://www.freedesktop.org/standards/dbus/1.0/busconfig.dtd">
 <busconfig>
         <policy user="root">
-                <allow own="org.upwork.HidBluetooth"/>
+                <allow own="org.upwork.HidBluetoothService"/>
         </policy>
         <policy context="default">
-                <deny own="org.upwork.HidBluetooth"/>
-                <allow send_destination="org.upwork.HidBluetooth"/>
+                <deny own="org.upwork.HidBluetoothService"/>
+                <allow send_destination="org.upwork.HidBluetoothService"/>
         </policy>
 </busconfig>
